syntax = "proto3";

import "MarioCash.proto";

option java_package = "dev.zhihexireng.proto";
option java_outer_classname = "NetProto";

service BlockChain {
    // Client to server messaging RPC
    rpc syncBlock (SyncLimit) returns (BlockList) {
    }
    rpc syncTransaction (SyncLimit) returns (TransactionList) {
    }

    // Client to server streaming RPC
    rpc broadcastBlock (stream Block) returns (Empty) {
    }
    rpc broadcastTransaction (stream Transaction) returns (Empty) {
    }
}

message Empty {
}

message SyncLimit {
    bytes branch = 1;
    uint64 offset = 2;
    uint32 limit = 3;
}
